[package]
name = "wasmtime-wasi-nn"
version = "0.29.0"
authors = ["The Wasmtime Project Developers"]
description = "Wasmtime implementation of the wasi-nn API"
documentation = "https://docs.rs/wasmtime-wasi-nn"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm", "computer-vision"]
keywords = ["webassembly", "wasm", "neural-network"]
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition = "2018"

[dependencies]
# These dependencies are necessary for the witx-generation macros to work:
anyhow = "1.0"
log = { version = "0.4", default-features = false }
wasmtime = { path = "../wasmtime", version = "0.29.0", default-features = false }
wasmtime-runtime = { path = "../runtime", version = "0.29.0" }
wasmtime-wasi = { path = "../wasi", version = "0.29.0" }
wiggle = { path = "../wiggle", version = "0.29.0" }

# These dependencies are necessary for the wasi-nn implementation:
openvino = { version = "0.3.1", features = ["runtime-linking"] }
#heim = "0.1.0-rc.1"
#tvm = "0.1.1-alpha"
tvm = { git = "https://github.com/sott0n/tvm", rev = "1dd392c1b4669091aa502b6b20b0c5b4592fa56b"}
thiserror = "1.0"

#[patch.crates-io]
#tvm-build = { git = "https://github.com/sott0n/tvm-build" }

[build-dependencies]
walkdir = "2.3"

[badges]
maintenance = { status = "experimental" }
